[package]
name = "windows_volume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio",
    "Win32_Media",
    "Win32",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
]